# MovieBot

./: .env  app.py  data.db  pyproject.toml  requirements.txt  states.py
data/: checking.py  config.py
database/: database.py  models.py
database/functions/: channel.py  channel_join.py  movie.py  save_movie.py  users.py
filters/: channel.py  group.py  user.py
handlers/: __init__.py
handlers/admins/: __init__.py  adv.py  channel.py  panel.py
handlers/users/: __init__.py  add_movie.py  get_movie.py  join_channel.py  like_page.py  search_query.py  start.py  top_films.py
keyboards/: inline.py
middlewares/: __init__.py  subscription.py  throttling.py
